fix: menuBtn overflow

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -30,7 +30,7 @@ header {
   place-items: center;
 
   svg {
-    max-height: 100%;
+    max-height: 95%;
   }
 }
 
